--- a/about/index.html
+++ b/about/index.html
@@ -244,7 +244,7 @@
                 </div><!-- he view -->
             </div><!-- he wrap -->
             <h4>Renate Bech-Sørensen</h4>
-            <h5 class="ctitle">Inventaransvarlig</h5>
+            <h5 class="ctitle">Responsible for Inventory</h5>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="hline"></div>
         </div><! --/col-lg-3 -->
@@ -283,7 +283,7 @@
 
         <div class="col-lg-3 col-md-3 col-sm-3">
             <div class="he-wrap tpl6">
-            <img src="/assets/img/members/mimi.jpg" alt="">
+            <img src="/assets/img/members/anonym_m.jpg" alt="">
                 <div class="he-view">
                     <div class="bg a0" data-animate="fadeIn">
                         <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
