--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/assets/ico/favicon.ico">
 
-    <title>Makerspace-IDI. - Home</title>
+    <title>Makerspace-IDI - Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
@@ -45,7 +45,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Makerspace-IDI.</a>
+      <a class="navbar-brand" href="/">Makerspace-IDI</a>
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
@@ -87,14 +87,14 @@
             </div>
             <div class="col-md-4">
                 <i class="fa fa-flask"></i>
-                <h4>Pushing bounderies</h4>
+                <h4>Pushing boundaries</h4>
                 <p>Testing the limits of your imagination through creation.</p>
                   <!-- <p><br/><a href="#" class="btn btn-theme">More Info</a></p> -->
             </div>
             <div class="col-md-4">
                 <i class="fa fa-trophy"></i>
-                <h4>High competance</h4>
-                <p>We strive for exellence, so you don't have to.</p>
+                <h4>High competence</h4>
+                <p>We strive for excellence, so you don't have to.</p>
                 <!-- <p><br/><a href="#" class="btn btn-theme">More Info</a></p> -->
             </div>
         </div>
@@ -243,7 +243,7 @@
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-4 col-lg-offset-1">
-            <h4>More About Our Agency.</h4>
+            <h4>More About Our Agency</h4>
             <p>We make awesome happen!</p>
             <p><br/><a href="/about/" class="btn btn-theme">More Info</a></p>
         </div>
