changed philipp.jpg resolution

--- a/about/index.html
+++ b/about/index.html
@@ -147,7 +147,7 @@
                 </div><!-- he view -->
             </div><!-- he wrap -->
             <h4>Hung Quang Thieu</h4>
-            <h5 class="ctitle">Responsible for Webdevelopment</h5>
+            <h5 class="ctitle">Responsible for Web Development</h5>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="hline"></div>
         </div><! --/col-lg-3 -->
