more croppin in jpg

--- a/about/index.html
+++ b/about/index.html
@@ -97,7 +97,7 @@
                 </div><!-- he view -->
             </div><!-- he wrap -->
             <h4>Philipp Zirpins</h4>
-            <h5 class="ctitle">Supreme Leader</h5>
+            <h5 class="ctitle">Leader</h5>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="hline"></div>
         </div><! --/col-lg-3 -->
