--- a/index.html
+++ b/index.html
@@ -87,12 +87,8 @@
     <section class="section">
         <div class="container">
             <h1 class="title">
-               Want to see what we are doing? Take a look at our Wiki!
+               Want to see what we are doing? <a href="https://www.ntnu.no/wiki/display/scilmakerspace/">Take a look at our Wiki!</a>
             </h1>
-            <h2 class="subtitle">
-                Send us a message at:
-                <a href="https://www.ntnu.no/wiki/display/scilmakerspace/">Mail</a>
-            </h2>
         </div>
     </section>
     
