--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>The makerspace is run by a group of students, keeping the space and tools operationable and up to date.
                         They are also very friendly and may answer any questions you may have.</p>
                     <p>
-                    <h2>
+                    <h2 class="subtitle">
                        Want to see what we are doing? <a href="https://www.ntnu.no/wiki/display/scilmakerspace/">Take a look at our Wiki!</a>
                     </h2>
                 </div>
