--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
                     We are
                     <strong>SCIL</strong>: Makerspace-IDI
                 </h2>
+                <h2>What is happening in the workspace area?</h2>
+                <iframe src="https://calendar.google.com/calendar/embed?src=b57g6if0m96apeup4d3lco0qfg%40group.calendar.google.com&ctz=Europe/Oslo" style="border: 0" 
+                        width="400" height="200" frameborder="0" scrolling="no"></iframe>
+                
+                <h2>What is happening in the makerspace area?</h2>
+                <iframe src="https://calendar.google.com/calendar/embed?src=akr5otp3ln1vaom4apa6ahljns%40group.calendar.google.com&ctz=Europe/Oslo" style="border: 0"
+                        width="400" height="200" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
     </section>
