fix widget placement for desktop

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="hero is-medium is-primary is-bold">
         <div class="hero-body container">
             <div class="columns ">
-                <div class="is-three-quarters column">
+                <div class="column">
                     <h1 class="title">
                         Hello World! </h1>
                     <h2 class="subtitle">
