Remove a lot of uneccesary information. Clean up layout. Fix location.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-
-
     <section class="hero is-medium is-primary is-bold">
         <div class="hero-body container">
             <div class="columns ">
@@ -22,11 +20,27 @@
                         We are
                         <strong>SCIL</strong>: Makerspace-IDI
                     </h2>
+                    <h2 class="subtitle">
+                        Come visit us!
+                        <br> We are located in
+                        <a href="http://bit.ly/2DfKAjy">
+                            <strong>IT-Bygget room 040, ground floor.</strong>
+                        </a>
+                    </h2>
                 </div>
                 <div class="column">
+                    <!-- <h1 class="title">
+                            Get in touch! </h1> -->
                     <h2 class="title">Talk or chat with us</h2>
-                    <iframe src="https://discordapp.com/widget?id=403193477149491200&theme=dark" width="400" height="250" allowtransparency="true"
-                        frameborder="0"></iframe>
+                    <h2 class="subtitle">
+                        You can reach us via
+                        <a href="mailto:makerspace.idi@gmail.com?subject=Makerspace-IDI">Mail</a>
+                        or talk to us on
+                        <a href="https://discord.gg/QvhkMgc">Discord</a>.
+                    </h2>
+                    <iframe src="https://discordapp.com/widget?id=403193477149491200&theme=dark" width="100%" height="350" allowtransparency="true"
+                        frameborder="0">
+                    </iframe>
                 </div>
             </div>
         </div>
@@ -38,26 +52,13 @@
                 About us </h1>
             <div class="columns">
                 <div class="column">
-                    <h2 class="subtitle">
-                        What is
-                        <strong>SCIL</strong>?
-                    </h2>
-                    <p>
-                        SCIL is the Smart City Infrastructure Lab at NTNU.
-                    </p>
-                </div>
-                <div class="column">
-                    <h2 class="subtitle">
-                        What is
-                        <strong>Makerspace-IDI</strong>?
-                    </h2>
                     <p>
                         NTNU
                         <strong>
                             <a href="https://www.ntnu.edu/idi"> Department of Computer Science</a>
                         </strong> (aka. IDI) has its own Makerspace located in
-                        <a href="https://use.mazemap.com/#v=1&left=10.4015211&right=10.4030684&top=63.4173936&bottom=63.4170133&zlevel=1&campusid=1&sharepoitype=poi&sharepoi=72985&utm_medium=longurl">
-                            <strong>IT-Bygget room 142, ground floor.</strong>
+                        <a href="http://bit.ly/2DfKAjy">
+                            <strong>IT-Bygget room 040, ground floor.</strong>
                         </a>
                     </p>
                     <p>It is equipped with tools and components so that you easily may get to work on your ideas.</p>
@@ -74,37 +75,6 @@
 
             </div>
     </section>
-
-
-    <section class="section">
-        <div class="container">
-            <h1 class="title">
-                Get in touch! </h1>
-            <h2 class="subtitle">
-                Send us a message at:
-                <a href="mailto:makerspace.idi@gmail.com?subject=Makerspace-IDI">Mail</a>
-                or talk to us on <a href="https://discord.gg/QvhkMgc">Discord</a>.
-            </h2>
-        </div>
-    </section>
-    <section class="section">
-
-        <div class="container">
-            <h1 class="title">What is happening in the makerspace?</h1>
-
-            <h2 class="subtitle">What is happening in the makerspace area?</h2>
-            <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=b57g6if0m96apeup4d3lco0qfg%40group.calendar.google.com&amp;color=%238D6F47&amp;ctz=Europe%2FOslo"
-                style="border-width:0" width="800" height="400" frameborder="0" scrolling="no"></iframe>
-
-
-            <h2 class="subtitle">What is happening in the workspace area?</h2>
-            <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=akr5otp3ln1vaom4apa6ahljns%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=Europe%2FOslo"
-                style="border-width:0" width="800" height="400" frameborder="0" scrolling="no"></iframe>
-
-        </div>
-    </section>
-
-
 
 </body>
 
