Added recent posts from the blog and removed calendar for now

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="column">
                     <h2 class="title">Talk or chat with us</h2>
-                    <iframe src="https://discordapp.com/widget?id=403193477149491200&theme=dark" width="400" height="250" allowtransparency="true"
+                    <iframe src="https://discordapp.com/widget?id=403193477149491200&theme=dark" max-width="400" height="250" allowtransparency="true"
                         frameborder="0"></iframe>
                 </div>
             </div>
@@ -91,16 +91,20 @@
 
         <div class="container">
             <h1 class="title">What is happening in the makerspace?</h1>
-
+            <h2 class="subtitle">Recent posts from our blog</h2>
+                <iframe src="https://www.ntnu.no/wiki/pages/viewrecentblogposts.action?key=scilmakerspace"
+                style="border-width:0" max-width="800" height="400" frameborder="0" scrolling="no"></iframe>
+                
+                <!-- Hidden until we have something to show
             <h2 class="subtitle">What is happening in the makerspace area?</h2>
             <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=b57g6if0m96apeup4d3lco0qfg%40group.calendar.google.com&amp;color=%238D6F47&amp;ctz=Europe%2FOslo"
-                style="border-width:0" width="800" height="400" frameborder="0" scrolling="no"></iframe>
+                style="border-width:0" max-width="800" height="400" frameborder="0" scrolling="no"></iframe>
 
 
             <h2 class="subtitle">What is happening in the workspace area?</h2>
             <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=akr5otp3ln1vaom4apa6ahljns%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=Europe%2FOslo"
-                style="border-width:0" width="800" height="400" frameborder="0" scrolling="no"></iframe>
-
+                style="border-width:0" max-width="800" height="400" frameborder="0" scrolling="no"></iframe>
+-->
         </div>
     </section>
 
