--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
 
         <div class="container">
             <h1 class="title">What is happening in the makerspace?</h1>
-            <h2 class="subtitle">Recent posts from our blog</h2>
-                <iframe src="https://www.ntnu.no/wiki/pages/viewrecentblogposts.action?key=scilmakerspace"
-                style="border-width:0" max-width="800" height="400" frameborder="0" scrolling="no"></iframe>
-                
+            <h2 class="subtitle">Recent posts from our <a href="https://www.ntnu.no/wiki/pages/viewrecentblogposts.action?key=scilmakerspace">blog</a></h2>
+            <a href="https://www.ntnu.no/wiki/pages/viewpage.action?pageId=115639389">
+             <h3>Micro controller badge (Scout badge)</h3>
+                <p>Dag is a scout leader in Charlottenlund Speidergruppe. The group wanted to make a micro controller badge. Dag was involved in making the lesson and providing the equipment from the SCIL maker space.</p>
+            </a>
                 <!-- Hidden until we have something to show
             <h2 class="subtitle">What is happening in the makerspace area?</h2>
             <iframe src="https://calendar.google.com/calendar/embed?mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=b57g6if0m96apeup4d3lco0qfg%40group.calendar.google.com&amp;color=%238D6F47&amp;ctz=Europe%2FOslo"
